# uform

./: README.md  pyproject.toml
example/: app.py
example/templates/: user.html
tests/: test_forms.py
uforms/: forms.py
uforms/templates/: base.html
uforms/templates/bootstrap/: base.html  forms.html
