[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uforms"
description = 'Modernized forms validation and rendering'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = ["forms", "pydantic"]
authors = [
  { name = "chaojie", email = "hi@chaojie.fun" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic[email]",
  "jinja2"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/ischaojie/uforms#readme"
Issues = "https://github.com/ischaojie/uforms/issues"
Source = "https://github.com/ischaojie/uforms"

[tool.hatch.version]
path = "uforms/__init__.py"

[tool.hatch.envs.default]
dependencies = [
    "flake8",
    "pytest",
    "mypy",
    "black",
    "isort",
    "autoflake",
    "pytest-cov",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]>=0.18"
]

[tool.hatch.envs.default.scripts]
clean = ["git clean"]
check = [
    "flake8 uforms tests --max-line-length=90",
    "black --check --diff uforms tests",
    "isort --check-only --diff uforms tests",
    "mypy uforms"
]
lint = [
    "autoflake -r uforms tests",
    "isort uforms tests",
    "black uforms tests",
]
test = [
    "pytest tests/ -s --cov=uforms --cov-config=pyproject.toml --cov-report=term-missing --cov-report=xml --cov-fail-under=90",
]
report = ["coverage report -m"]
all = ["check", "test"]

[tool.black]
line-length = 90

[tool.isort]
profile = "black"

[tool.autoflake]
in-place = true
remove-all-unused-imports = true

[tool.mypy]
plugins = [
    "pydantic.mypy"
]
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
show_error_codes = true
